--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,12 @@
         <title>Puppeteer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> <!-- CDN for p5.dom.js -->
-        <script src="sketch.js"></script> <!-- local js file  -->       
+        <script src="/js/sketch.js"></script>  <!--local js file-->         
+        <script src="/js/verbList.js"></script>  <!--local js file-->         
+     
         <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
     </header>
     <body>
-
+        <div id="square" style="width:100%; height:100%; background-color:white"></div>
     </body>
 </html>
