Fixed pathing issue

--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
         <title>Puppeteer</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> <!-- CDN for p5.dom.js -->
-        <script src="/js/sketch.js"></script>  <!--local js file-->         
-        <script src="/js/verbList.js"></script>  <!--local js file-->         
+        <script src="../js/sketch.js"></script>  <!--local js file-->         
+        <script src="../js/verbList.js"></script>  <!--local js file-->         
      
         <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
     </header>
