--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
         <script src="../js/sketch.js"></script>  <!--local js file-->         
         <script src="../js/verbList.js"></script>  <!--local js file-->         
         <script src="../js/videoList.js"></script>  <!--local js file-->         
-        <style> html, body {height: 100%} body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+        <style> html, body {height: 100%} body {padding: 0; margin: 0;}  </style>
     </header>
     <body>
     </body>
