Added adverb list and updated index to include adverb script

--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> <!-- CDN for p5.dom.js -->
         <script src="../js/sketch.js"></script>  <!--local js file-->         
-        <script src="../js/verbList.js"></script>  <!--local js file-->         
+        <script src="../js/verbList.js"></script>  <!--local js file-->  
+        <script src="../js/adverbList.js"></script>  <!--local js file-->       
         <script src="../js/videoList.js"></script>  <!--local js file-->         
-        <style> html, body {height: 100%} body {padding: 0; margin: 0;}  </style>
+        <style> html, body {height: 100%} body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
     </header>
     <body>
     </body>
