--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
     <header>
-        <title>Puppeteer</title>
+        <title>Shadow Play</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> <!-- CDN for p5.dom.js -->
@@ -8,7 +8,7 @@
         <script src="../js/verbList.js"></script>  <!--local js file-->  
         <script src="../js/adverbList.js"></script>  <!--local js file-->       
         <script src="../js/videoList.js"></script>  <!--local js file-->         
-        <style> html, body {height: 100%} body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+        <style> </style>
     </header>
     <body>
     </body>
