--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <html>
-    <header>
+    <head>
         <title>Shadow Play</title>
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script> <!-- CDN for p5.dom.js -->
@@ -9,7 +10,7 @@
         <script src="../js/adverbList.js"></script>  <!--local js file-->       
         <script src="../js/videoList.js"></script>  <!--local js file-->         
         <style> </style>
-    </header>
+    </head>
     <body>
     </body>
 </html>
