--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <html>
     <header>
+    <head>
         <title>Shadow Play</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script> <!-- CDN for p5.min.js -->
@@ -10,6 +11,9 @@
         <script src="../js/videoList.js"></script>  <!--local js file-->         
         <style> </style>
     </header>
+        <link rel="stylesheet" href="../css/styles.css">
+      
+    </head>
     <body>
     </body>
 </html>
